# mcp_practices_and_antipatterns

./: .env.example  .gitignore  README.md  pyproject.toml
bench/: flask_fixture.py  report.py  run_benchmark.py  scenarios.py
docs/: PLAN.md  TRANSCRIPTS.md
mlops_backend/: api.py  data.py  flask_app.py  openapi.json  rest_api.py  task_api.py
mlops_backend/data/: alerts.json  batch_jobs.json  datasets.json  deploys.json  endpoints.json  metrics.json  models.json
servers/: _sandbox_runner.py  classic_server.py  codemode_server.py  mlops.py  rest_mirror_server.py  sandbox.py  task_codemode_server.py  task_oriented_server.py
tests/: conftest.py  test_api.py  test_backend.py  test_classic_server.py  test_codemode_server.py  test_flask_app.py  test_mlops_helpers.py  test_rest_api.py  test_rest_mirror_server.py  test_sandbox.py  test_task_api.py  test_task_codemode_server.py  test_task_oriented_server.py
